upload on information & name

--- a/adrchambers.com/adr-chambers-members/index.html
+++ b/adrchambers.com/adr-chambers-members/index.html
@@ -216,7 +216,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
-				<h1>ADR Chambers Members</h1>
+				<h1>Alternative Dispute Solutions Centre</h1>
 			</div>
 		</div>
 	</div>
@@ -246,7 +246,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			<div class="hidden-print wpb_column vc_column_container vc_col-sm-4">
 				<div class="vc_column-inner">
 					<div class="wpb_wrapper">
-						<a href="../neutral/Aaron-Ogletree/index.html">
+						<!-- <a href="../neutral/Aaron-Ogletree/index.html"> -->
 							<h3 style="text-align: left" class="vc_custom_heading menu-header" >Aaron Peron Ogletree</h3>
 							<div  class="vc_wp_custommenu wpb_content_element">
 								<div class="widget widget_nav_menu">
@@ -255,9 +255,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									</div>
 								</div>
 							</div>
-						</a>
+						<!-- </a> -->
 					</div>
 				</div>
+			</div>
+
+			<div class="vc_col-sm-8">
+				<p><b>
+					Aaron Peron Ogletree is an arbitrator and mediator with leading alternative dispute resolution panels. He has over 10 years of complex litigation and arbitration experience.  He is a co-founder of the Alternative Dispute Solutions Centre (Private) Limited.  He served as the chair of the Ontario Bar Association’s Natural Resources & Energy Law Section and the chair of the Canadian Bar Association National International Law Section.  He has been named by Super Lawyers as a Michigan Rising Star, 2017-2018 recipient of the National Bar Association’s “40 Under 40 Nation’s Best Advocates” award, 2018 recipient of The Network Journal’s 40 Under Forty Achievers award and named to the Fellows of the American Bar Foundation. 
+				</b></p>
 			</div>
 		</div>
 
@@ -266,7 +272,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			<div class="hidden-print wpb_column vc_column_container vc_col-sm-4">
 				<div class="vc_column-inner">
 					<div class="wpb_wrapper">
-						<a href="../neutral/Davison-Kanokanga/index.html">
+						<!-- <a href="../neutral/Davison-Kanokanga/index.html"> -->
 							<h3 style="text-align: left" class="vc_custom_heading menu-header" >Davison Kanokanga </h3>
 							<div  class="vc_wp_custommenu wpb_content_element">
 								<div class="widget widget_nav_menu">
@@ -275,9 +281,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									</div>
 								</div>
 							</div>
-						</a>
+						<!-- </a> -->
 					</div>
 				</div>
+			</div>
+
+			<div class="vc_col-sm-8">
+				<p><b>
+					Davison Kanokanga was admitted as a lawyer in Zimbabwe on the 6th March 1989 and has been practicing law since then. He sits on Zimbabwe's  Legal Practitioners Disciplinary Tribunal to which he was appointed in 2008. Davison is the author of Commercial Arbitration InZimbabwe, Juta(Pty)Ltd 2020. He is both an arbitration Counsel and an arbitrator. Davison is  a member of the Chartered Institute of Arbitrators(UK) , the African Arbitration Association, and the SADC Panel of International Commercial Arbitrators. He is also  a panellist with the Commercial Arbitration Centre, Harare,the Association of Arbitrators (Southern Africa), NPC and the Arbitration Foundation of Southern Africa. Davison is also the co-founder of Alternative Dispute Solutions Centre(Pvt)Ltd. 
+					
+				</b></p>
 			</div>
 		</div>
 
@@ -285,7 +298,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			<div class="hidden-print wpb_column vc_column_container vc_col-sm-4">
 				<div class="vc_column-inner">
 					<div class="wpb_wrapper">
-						<a href="../neutral/Anorld-Chikazhe/index.html">
+						<!-- <a href="../neutral/Anorld-Chikazhe/index.html"> -->
 							<h3 style="text-align: left" class="vc_custom_heading menu-header" >Arnold Z. Chikazhe </h3>
 							<div  class="vc_wp_custommenu wpb_content_element">
 								<div class="widget widget_nav_menu">
@@ -294,9 +307,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									</div>
 								</div>
 							</div>
-						</a>
+						<!-- </a> -->
 					</div>
 				</div>
+			</div>
+
+			<div class="vc_col-sm-8">
+				<p><b>
+					Arnold is a co-founder and executive director of the Alternative Dispute Solutions Centre. He specialised in Global Energy, International Arbitration and Environmental Law at The University of Texas at Austin, Texas, USA and is admitted to practice law in Zimbabwe. Arnold’s arbitration experience includes representing clients at the Commercial Arbitration Centre at Harare and conducting pre-arbitration advice and preparatory work under the China International Economic and Trade Arbitration Commission in Shanghai (CIETAC). Mr. Chikazhe is also a professional educator and has conducted trainings for the Law Society of Zimbabwe, Zimbabwe Environmental Law Association and Zimbabwe Energy Council among other forums. He has also written articles and opinions by invitation for various forums including the International Bar Association, All China Lawyers Association, Zimbabwe Energy Regulatory Authority, Zimbabwe Energy Council and World Bank Group. 
+				</b></p>
 			</div>
 
 		</div>
