--- a/adrchambers.com/index.html
+++ b/adrchambers.com/index.html
@@ -310,7 +310,7 @@
 				<div class="row">
 					<div class="col-xs-12">
 						<div class="hero-content">
-							<div class="hero-headline">Welcome to Alternative Dispute Resolution<br> Centre of Zimbabwe Chambers</div>
+							<div class="hero-headline">Welcome to Alternative Dispute Solutions<br> Centre</div>
 							<!-- <p>* ADR Chambers has administered over 55,000 mediations<br>and arbitrations over the last seven years.</p> -->
 						</div>
 					</div>
