--- a/adrchambers.com/adr-chambers-members/index.html
+++ b/adrchambers.com/adr-chambers-members/index.html
@@ -156,8 +156,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 mobile-stretch">
-					<div class="upper-nav phone">1-800-856-5154</div>
-					<div class="upper-nav email"><a href="mailto:adr@adrchambers.com">adr@adrchambers.com</a></div>
+<!--					<div class="upper-nav phone">1-800-856-5154</div>-->
+<!--					<div class="upper-nav email"><a href="mailto:adr@adrchambers.com">adr@adrchambers.com</a></div>-->
 					<div class="upper-nav book-neutrals"><a href="../neutrals/index.html">List of Neutrals</a></div>
 					<div class="upper-nav our-neutrals"><a href="../search/index.html">Search by Expertise</a></div>
 				</div>
@@ -173,15 +173,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<div class="primary-nav">
 					<div id="mega-menu-wrap-main-menu" class="mega-menu-wrap"><div class="mega-menu-toggle"><div class="mega-toggle-blocks-left"></div><div class="mega-toggle-blocks-center"></div><div class="mega-toggle-blocks-right"><div class='mega-toggle-block mega-menu-toggle-block mega-toggle-block-1' id='mega-toggle-block-1' tabindex='0'><span class='mega-toggle-label' role='button' aria-expanded='false'><span class='mega-toggle-label-closed'>MENU</span><span class='mega-toggle-label-open'>MENU</span></span></div></div></div><ul id="mega-menu-main-menu" class="mega-menu max-mega-menu mega-menu-horizontal mega-no-js" data-event="hover_intent" data-effect="fade_up" data-effect-speed="200" data-effect-mobile="disabled" data-effect-speed-mobile="0" data-mobile-force-width="false" data-second-click="go" data-document-click="collapse" data-vertical-behaviour="standard" data-breakpoint="992" data-unbind="true" data-hover-intent-timeout="300" data-hover-intent-interval="100"><li class='mega-menu-item mega-menu-item-type-custom mega-menu-item-object-custom mega-current-menu-ancestor mega-current-menu-parent mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-menu-item-10' id='mega-menu-item-10'><a class="mega-menu-link" href="#" aria-haspopup="true" aria-expanded="false" tabindex="0">Company<span class="mega-indicator"></span></a>
 						<ul class="mega-sub-menu">
-							<li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-84' id='mega-menu-item-84'><a class="mega-menu-link" href="../about-adr-chambers/index.html">About ADR Chambers</a></li>
 
-							<li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-68' id='mega-menu-item-68'><a class="mega-menu-link" href="../news-articles/index.html">News &#038; Articles</a></li>
+								<li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-84' id='mega-menu-item-84'>
+									<a class="mega-menu-link" href="about-adr-chambers/index.html">About the Alternative Dispute Solution Centre</a>
+								</li>
+								<li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-257' id='mega-menu-item-257'>
+									<a class="mega-menu-link" href="adr-chambers-members/index.html">Members</a>
+								</li>
+								<li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-85' id='mega-menu-item-85'>
+									<a class="mega-menu-link" href="premises/index.html">Premises</a>
+								</li>
 
-							<li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-85' id='mega-menu-item-85'><a class="mega-menu-link" href="../premises/index.html">Premises</a></li>
 
-							<!-- <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-258' id='mega-menu-item-258'><a class="mega-menu-link" href="../stitt-feld-hand-group/index.html">Stitt Feld Handy Group</a></li> -->
 
-							<li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-257' id='mega-menu-item-257'><a class="mega-menu-link" href="adr-chambers-members/index.html">Members</a></li>
 						</ul>
 </li><li class='mega-menu-item mega-menu-item-type-custom mega-menu-item-object-custom mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-menu-item-11' id='mega-menu-item-11'><a class="mega-menu-link" href="#" aria-haspopup="true" aria-expanded="false" tabindex="0">Mediation<span class="mega-indicator"></span></a>
 <ul class="mega-sub-menu">
