reduces font on paragraphs on idenx page

--- a/adrchambers.com/index.html
+++ b/adrchambers.com/index.html
@@ -385,21 +385,23 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-4 ">
-					<a href="#" class="feature-button neutrals" style="font-size: 16pt">
+					<a href="#" class="feature-button neutrals" style="font-size: 20pt; pointer-events: none; cursor: default;">
 						MEDITATION
-						<p class="gmail_default" style="margin-top: 15px; color: white; font-size: 10pt">
+						<p class="gmail_default" style="margin-top: 15px; color: white; font-size: 8pt">
 							Meditation is a voluntary alternative dispute resolution process, in which a neutral person facilitates negotiations
 							between parties to help them settle their dispute. If the parties do not reach a settlement, the dispute may still be settled
 							in proceedings before our arbitrators or in court.
+							<br>
+							<br>
 						</p>
 					</a>
 
 
 				</div>
 				<div class="col-sm-4">
-					<a href="#" class="feature-button neutrals" style="font-size: 16pt">
+					<a href="" class="feature-button neutrals" style="font-size: 20pt; pointer-events: none; cursor: default;" >
 						ARBITRATION
-						<p class="gmail_default" style="margin-top: 15px; color: white; font-size: 10pt">
+						<p class="gmail_default" style="margin-top: 15px; color: white; font-size: 8pt">
 							Arbitration is an adjudicatory process that is used in place of litigation to resolve a dispute.
 							The parties select an individual abitrator, or a panel of three arbitrators and render a decision in the case.
 							<br>
@@ -409,9 +411,9 @@
 					</a>
 				</div>
 				<div class="col-sm-4">
-					<a href="#" class="feature-button neutrals" style="font-size: 16pt">
+					<a href="#" class="feature-button neutrals" style="font-size: 20pt; pointer-events: none; cursor: default;">
 						TRAINING
-						<p class="gmail_default" style="margin-top: 15px; color: white; font-size: 10pt">
+						<p class="gmail_default" style="margin-top: 15px; color: white; font-size: 8pt">
 							The Alternative Dispute Solutions Centre offers cutting-edge practical arbitration training
 							to professionals with keen interest in Arbitration and ADR.
 							<br>
