removes adr on contact

--- a/adrchambers.com/contact/index.html
+++ b/adrchambers.com/contact/index.html
@@ -309,7 +309,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 								</p>
 								<div class="wpb_text_column wpb_content_element  vc_custom_1509634477254" >
 									<div class="wpb_wrapper">
-										<h3>ADR Chambers<br />
+										<h3>Alternative Dispute Solutions<br />
 										<em style="font-size: 16px;">Don Valley Parkway and 401</em></h3>
 										<div class="gmail_default">
 											<i>
