--- a/adrchambers.com/training/index.html
+++ b/adrchambers.com/training/index.html
@@ -299,60 +299,100 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="row">
         <div class="col-sm-12">
             <div class="content">
-				                <div class="vc_row wpb_row vc_row-fluid">
-<div class="wpb_column vc_column_container vc_col-sm-8">
-<div class="vc_column-inner">
-<div class="wpb_wrapper">
-<p style="font-size: 28px;line-height: 36px;text-align: left;font-family:Lato;font-weight:300;font-style:normal" class="vc_custom_heading vc_custom_1495831635495" >ADR Chambers offers high quality professional development through its training division, the Stitt Feld Handy Group.</p>
-<div class="wpb_text_column wpb_content_element " >
-<div class="wpb_wrapper">
-<p>The <a href="https://sfhgroup.com/">Stitt Feld Handy Group</a> offers workshops in:</p>
-<ul>
-<li>alternative dispute resolution;</li>
-<li>negotiation;</li>
-<li>mediation;</li>
-<li>dealing with difficult people;</li>
-<li>having difficult conversations;</li>
-<li>workplace coaching;</li>
-<li>and customer service.</li>
-</ul>
-<p>The Stitt Feld Handy Group provides in-person and online workshops to the public. Participants receive certificates from the University of Windsor’s Faculty of Law. The Stitt Feld Handy Group also provides customized training, from focused one-day programs to in-depth multi-day workshops. Customized training can also include an online component and customized follow-up.</p>
-<p>Stitt Feld Handy Group instructors are all experienced mediators, negotiators and coaches who have taught workshops throughout Canada and around the world.</p>
-<p>To find out more, visit the <a href="https://sfhgroup.com/" target="_blank" rel="noopener noreferrer">Stitt Feld Handy Group</a>.</p>
-</p></div>
-</p></div>
-</div>
-</div>
-</div>
-<div class="hidden-print wpb_column vc_column_container vc_col-sm-4">
-<div class="vc_column-inner">
-<div class="wpb_wrapper">
-<div class="vc_btn3-container vc_btn3-center" ><a style="background-color:#dd0046; color:#ffffff;" class="vc_general vc_btn3 vc_btn3-size-md vc_btn3-shape-square vc_btn3-style-custom vc_btn3-block vc_btn3-icon-left" href="https://sfhgroup.com/contact-us/" title="" target="_blank"><i class="vc_btn3-icon fa fa-info-circle"></i> Request More Information About Training</a></div>
-<h3 style="text-align: left" class="vc_custom_heading menu-header" >Other ADR Services</h3>
-<div  class="vc_wp_custommenu wpb_content_element">
-<div class="widget widget_nav_menu">
-<div class="menu-other-adr-services-general-sidebar-container">
-<ul id="menu-other-adr-services-general-sidebar" class="menu">
-<li id="menu-item-428" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-428"><a href="../adr-systems-design/index.html">ADR Systems Design</a></li>
-<li id="menu-item-433" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-433"><a href="../coaching/index.html">Coaching</a></li>
-<li id="menu-item-2079" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2079"><a href="../fairness-monitoring/index.html">Fairness Monitoring</a></li>
-<li id="menu-item-431" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-431"><a href="../integrity-commissioner/index.html">Integrity Commissioner</a></li>
-<li id="menu-item-435" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-435"><a href="../civil-motion/index.html">Civil Motion video conference available</a></li>
-<li id="menu-item-434" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-434"><a href="../medarb/index.html">Med/Arb</a></li>
-<li id="menu-item-406" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-406"><a href="../neutral-evaluation/index.html">Neutral Evaluation</a></li>
-<li id="menu-item-432" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-432"><a href="../ombudsman/index.html">Ombuds</a></li>
-<li id="menu-item-436" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-436"><a href="../private-appeals/index.html">Private Appeal</a></li>
-<li id="menu-item-429" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-424 current_page_item menu-item-429"><a href="index.html" aria-current="page">Training</a></li>
-<li id="menu-item-437" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-437"><a href="../investigation/index.html">Workplace Investigation</a></li>
-<li id="menu-item-430" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-430"><a href="../workplace-restoration/index.html">Workplace Restoration</a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+				<div class="vc_row wpb_row vc_row-fluid">
+					<div class="wpb_column vc_column_container vc_col-sm-8">
+						<div class="vc_column-inner">
+							<div class="wpb_wrapper">
+								<p style="font-size: 28px;line-height: 36px;text-align: left;font-family:Lato;font-weight:300;font-style:normal" class="vc_custom_heading vc_custom_1495831635495" >
+									ARBITRATION COURSE
+								</p>
+
+								<p>
+									The Arbitration training program is focused on facilitating and promoting Arbitration as an 
+									alternative dispute resolution. It covers arbitration theory, practice, procedure and award 
+									writing. The course will develop a practitioner’s knowledge and practical skills increasing 
+									your breadth and understanding of the principles of arbitration allowing you to confidently 
+									practice in the field of arbitration.
+								</p>
+								<div class="wpb_text_column wpb_content_element " >
+									<div class="wpb_wrapper">
+										<p>
+											Arbitration Course Outline:
+										</p>
+										<ul>
+											<li>Program Agenda</li>
+											<li>An Overview of ADR</li>
+											<li>Advantages and Disadvantages of Arbitration</li>
+											<li>The Arbitration Agreement</li>
+											<li>Arbitrability</li>
+											<li>Jurisdiction</li>
+											<li>Invalidity</li>
+											<li>Procedural Law</li>
+											<li>Appointment of Arbitrators</li>
+											<li>Conducting a Preliminary Meeting</li>
+											<li>Hearing</li>
+											<li>Standard Award vs. Reasoned Award</li>
+											<li>Award Writing</li>
+											<li>Post Award Issues</li>
+											<li>Presumptive Finality</li>
+											<li>National Courts, Confirmation and Enforcement of Award</li>
+											<li>Challenge of Award</li>
+											<li>Overview of International Arbitration</li>
+											<li>How to Break into International Arbitration</li>
+										</ul>
+
+										<h3>MEDIATION COURSE</h3>
+										<p>
+											The Mediation training program is focused on facilitating and promoting 
+											Mediation an alternative dispute resolution mechanism of settling disputes and 
+											conflicts between individuals, groups and organizations. The Program’s key objective 
+											is the promotion of mediation as an efficient, sustainable and cost effective dispute 
+											resolution mechanism.
+										</p>
+										
+										</p>
+									</div>
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- <div class="hidden-print wpb_column vc_column_container vc_col-sm-4">
+						<div class="vc_column-inner">
+							<div class="wpb_wrapper">
+								<div class="vc_btn3-container vc_btn3-center" >
+								<a style="background-color:#dd0046; color:#ffffff;" class="vc_general vc_btn3 vc_btn3-size-md vc_btn3-shape-square vc_btn3-style-custom vc_btn3-block vc_btn3-icon-left" href="https://sfhgroup.com/contact-us/" title="" target="_blank">
+									<i class="vc_btn3-icon fa fa-info-circle"></i> 
+									Request More Information About Training
+								</a>
+							</div>
+								<h3 style="text-align: left" class="vc_custom_heading menu-header" >
+									Other ADR Services
+								</h3>
+								<div  class="vc_wp_custommenu wpb_content_element">
+									<div class="widget widget_nav_menu">
+										<div class="menu-other-adr-services-general-sidebar-container">
+											<ul id="menu-other-adr-services-general-sidebar" class="menu">
+												<li id="menu-item-428" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-428"><a href="../adr-systems-design/index.html">ADR Systems Design</a></li>
+												<li id="menu-item-433" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-433"><a href="../coaching/index.html">Coaching</a></li>
+												<li id="menu-item-2079" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2079"><a href="../fairness-monitoring/index.html">Fairness Monitoring</a></li>
+												<li id="menu-item-431" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-431"><a href="../integrity-commissioner/index.html">Integrity Commissioner</a></li>
+												<li id="menu-item-435" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-435"><a href="../civil-motion/index.html">Civil Motion video conference available</a></li>
+												<li id="menu-item-434" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-434"><a href="../medarb/index.html">Med/Arb</a></li>
+												<li id="menu-item-406" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-406"><a href="../neutral-evaluation/index.html">Neutral Evaluation</a></li>
+												<li id="menu-item-432" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-432"><a href="../ombudsman/index.html">Ombuds</a></li>
+												<li id="menu-item-436" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-436"><a href="../private-appeals/index.html">Private Appeal</a></li>
+												<li id="menu-item-429" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-424 current_page_item menu-item-429"><a href="index.html" aria-current="page">Training</a></li>
+												<li id="menu-item-437" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-437"><a href="../investigation/index.html">Workplace Investigation</a></li>
+												<li id="menu-item-430" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-430"><a href="../workplace-restoration/index.html">Workplace Restoration</a></li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div> -->
+				</div>
             </div>
         </div>
     </div>
