--- a/adrchambers.com/contact/index.html
+++ b/adrchambers.com/contact/index.html
@@ -12,7 +12,7 @@
 
 	
 	<!-- This site is optimized with the Yoast SEO plugin v14.8.1 - https://yoast.com/wordpress/plugins/seo/ -->
-	<title>Contact | ADR Chambers</title>
+	<title>Contact </title>
 	<meta name="description" content="ADR Chambers resolves disputes all over the country and around the world, working wherever people have disputes." />
 	<meta name="robots" content="index, follow" />
 	<meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
@@ -203,9 +203,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									<li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-257' id='mega-menu-item-257'>
 										<a class="mega-menu-link" href="../adr-chambers-members/index.html">Members</a>
 									</li>
-									<li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-85' id='mega-menu-item-85'>
-										<a class="mega-menu-link" href="../premises/index.html">Premises</a>
-									</li>
+
 
 
 								</ul>
@@ -254,9 +252,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 								</ul>
 							</li>
 
-							<li class='mega-menu-item mega-menu-item-type-custom mega-menu-item-object-custom mega-align-bottom-left mega-menu-flyout mega-menu-item-2427' id='mega-menu-item-2427'>
-								<a class="mega-menu-link" href="model-adr-clauses/index.html" tabindex="0">Model ADR Clauses</a>
-							</li>
 							<li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-90' id='mega-menu-item-90'>
 								<a class="mega-menu-link" href="../contact/index.html" tabindex="0">Contact</a>
 							</li>
