--- a/adrchambers.com/index.html
+++ b/adrchambers.com/index.html
@@ -251,7 +251,7 @@
                                             <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-257' id='mega-menu-item-257'>
                                                 <a class="mega-menu-link" href="adr-chambers-members/index.html">Members</a>
                                             </li>
-                                           
+
 
 
                                         </ul>
@@ -287,42 +287,15 @@
 
                                     <li class='mega-drops-to-left mega-menu-item mega-menu-item-type-custom mega-menu-item-object-custom mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-menu-item-13 drops-to-left' id='mega-menu-item-13'>
                                         <a class="mega-menu-link" href="#" aria-haspopup="true" aria-expanded="false" tabindex="0">
-                                            Other ADR Services
+											Training
                                             <span class="mega-indicator"></span>
                                         </a>
                                         <ul class="mega-sub-menu">
-                                            <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-439' id='mega-menu-item-439'>
-                                                <a class="mega-menu-link" href="adr-systems-design/index.html">ADR Systems Design</a>
-                                            </li>
-                                            <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-444' id='mega-menu-item-444'>
-                                                <a class="mega-menu-link" href="coaching/index.html">Coaching</a></li>
-                                            <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-2080' id='mega-menu-item-2080'>
-                                                <a class="mega-menu-link" href="fairness-monitoring/index.html">Fairness Monitoring</a>
-                                            </li>
-                                            <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-442' id='mega-menu-item-442'>
-                                                <a class="mega-menu-link" href="integrity-commissioner/index.html">Integrity Commissioner</a>
-                                            </li>
-                                            <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-446' id='mega-menu-item-446'>
-                                                <a class="mega-menu-link" href="civil-motion/index.html">Civil Motion</a>
-                                            </li>
-                                            <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-445' id='mega-menu-item-445'>
-                                                <a class="mega-menu-link" href="medarb/index.html">Med/Arb</a>
-                                            </li>
-                                            <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-449' id='mega-menu-item-449'>
-                                                <a class="mega-menu-link" href="neutral-evaluation/index.html">Neutral Evaluation</a>
-                                            </li>
-                                            <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-443' id='mega-menu-item-443'>
-                                                <a class="mega-menu-link" href="ombudsman/index.html">Ombuds</a>
-                                            </li>
-                                            <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-447' id='mega-menu-item-447'>
-                                                <a class="mega-menu-link" href="private-appeals/index.html">Private Appeal</a>
-                                            </li>
+
                                             <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-440' id='mega-menu-item-440'>
                                                 <a class="mega-menu-link" href="training/index.html">Training</a>
                                             </li>
-                                            <li class='mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-448' id='mega-menu-item-448'>
-                                                <a class="mega-menu-link" href="investigation/index.html">Workplace Investigation</a>
-                                            </li>
+
                                         </ul>
                                     </li>
 
